--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,24 @@ services:
     depends_on:
       - app
 
+  grafana:
+    image: grafana/grafana:9.3.0
+    ports:
+      - 3000:3000
+    environment:
+      - GF_SECURITY_ADMIN_USER=${GF_ADMIN_USER}
+      - GF_SECURITY_ADMIN_PASSWORD=${GF_ADMIN_PASS}
+    volumes:
+      - ./infrastructure/grafana.yaml:/etc/grafana/provisioning/datasources/datasources.yaml
+      - grafana:/var/lib/grafana
+    networks:
+      - connection
+    depends_on:
+      - prometheus
+
+volumes:
+  grafana:
+
 networks:
   connection:
     driver: bridge
