--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     hostname: postgres-app
     image: postgres:alpine
     ports:
-      - "127.0.0.1:5432:5432"
+      - "127.0.0.1:${POSTGRES_PORT}:5432"
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASS}
@@ -26,7 +26,7 @@ services:
       - .env
     restart: unless-stopped
     ports:
-      - 3000:3000
+      - ${APP_PORT}:3000
     depends_on:
       - postgres
     networks:
