--- a/infrastructure/grafana.yaml
+++ b/infrastructure/grafana.yaml
@@ -5,3 +5,7 @@ datasources:
   type: prometheus
   url: http://prometheus:9090
   isDefault: true
+- name: Loki
+  type: loki
+  access: proxy
+  url: http://loki:3100
